--- a/p2.html
+++ b/p2.html
@@ -1,10 +1,15 @@
-
 <html>
-<head>
-    
-    <title>HGROUP</title>
-</head>
-<body>
-    
-</body>
+    <head>
+        <title>HGROUP</title>
+    </head>
+    <body>
+        <hgroup>
+            <h1>THIS IS HEAD TAG!</h1>
+            <h2>THIS IS HEAD TAG!</h2>
+            <h3>THIS IS HEAD TAG!</h3>
+            <h4>THIS IS HEAD TAG!</h4>
+            <h5>THIS IS HEAD TAG!</h5>
+            <h6>THIS IS HEAD TAG!</h6>
+        </hgroup>
+    </body>
 </html>
